docs/api/qiskit/0.19/qiskit.ignis.mitigation.complete_meas_cal.mdx
---
title: complete_meas_cal (v0.19)
description: API reference for qiskit.ignis.mitigation.complete_meas_cal in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: function
python_api_name: qiskit.ignis.mitigation.complete_meas_cal
---

<span id="complete-meas-cal" />

# complete\_meas\_cal

<Function id="qiskit.ignis.mitigation.complete_meas_cal" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-ignis/tree/stable/0.3/qiskit/ignis/mitigation/measurement/circuits.py" signature="complete_meas_cal(qubit_list=None, qr=None, cr=None, circlabel='')">
  Return a list of measurement calibration circuits for the full Hilbert space.

  If the circuit contains $n$ qubits, then $2^n$ calibration circuits are created, each of which creates a basis state.

  **Parameters**

  *   **qubit\_list** (`Optional`\[`List`\[`int`]]) – A list of qubits to perform the measurement correction on. If None, and qr is given then assumed to be performed over the entire qr. The calibration states will be labelled according to this ordering (default None).
  *   **qr** (`Union`\[`int`, `List`\[[`QuantumRegister`](qiskit.circuit.QuantumRegister "qiskit.circuit.quantumregister.QuantumRegister")], `None`]) – Quantum registers (or their size).
  *   **None** (*If*) –
  *   **created** (*one is*) –
  *   **cr** (`Union`\[`int`, `List`\[[`ClassicalRegister`](qiskit.circuit.ClassicalRegister "qiskit.circuit.classicalregister.ClassicalRegister")], `None`]) – Classical registers (or their size).
  *   **None** –
  *   **created** –
  *   **circlabel** (`str`) – A string to add to the front of circuit names for unique identification(default ‘ ‘).

  **Return type**

  `Tuple`\[`List`\[[`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")], `List`\[`str`]]

  **Returns**

  A list of QuantumCircuit objects containing the calibration circuits.

  A list of calibration state labels.

  ## Additional Information:

  The returned circuits are named circlabel+cal\_XXX where XXX is the basis state, e.g., cal\_1001.

  Pass the results of these circuits to the CompleteMeasurementFitter constructor.

  **Raises**

  **QiskitError** – if both qubit\_list and qr are None.
</Function>

